--- a/app.html
+++ b/app.html
@@ -38,19 +38,20 @@
   </body>
 </html>
 
-<script src="https://www.gstatic.com/firebasejs/4.1.2/firebase.js"></script>
+<script src="https://www.gstatic.com/firebasejs/4.1.5/firebase.js"></script>
 <script
   src="https://code.jquery.com/jquery-3.2.1.slim.js"
   integrity="sha256-tA8y0XqiwnpwmOIl3SGAcFl2RvxHjA8qp0+1uCGmRmg="
   crossorigin="anonymous"></script>
 <script>
-  const config = {
-    apiKey: "AIzaSyD2mic7rsQf6z2FRf0951ViOxkd97tnKzA",
-    authDomain: "kayac-tech-blog.firebaseapp.com",
-    databaseURL: "https://kayac-tech-blog.firebaseio.com",
-    projectId: "kayac-tech-blog",
-    storageBucket: "kayac-tech-blog.appspot.com",
-    messagingSenderId: "164288839649"
+  // Initialize Firebase
+  var config = {
+    apiKey: "AIzaSyCiq7JGLqFG88JxacxEkQHqgzOaHAKuSbw",
+    authDomain: "darien-firebase-tutorial.firebaseapp.com",
+    databaseURL: "https://darien-firebase-tutorial.firebaseio.com",
+    projectId: "darien-firebase-tutorial",
+    storageBucket: "darien-firebase-tutorial.appspot.com",
+    messagingSenderId: "790105668502"
   };
   firebase.initializeApp(config);
   const db = firebase.database();
